PF: attempted to add scroll animation; fixed z-index of nav bar elements
To-do: check if scroll animation actually works properly

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,8 +27,12 @@ section.logo {
   position: fixed;
   top: 28px;
   left: 80px;
-  z-index: 99;
+  z-index: 101;
   width: 30px;
+}
+
+.logo a img {
+  filter: drop-shadow(0px 0px 2px #c0c0c0);
 }
 
 nav#close-button {
@@ -89,7 +93,7 @@ nav.top-navigation {
   padding-right: 50px;
   position: fixed;
   top: 20px;
-  /* z-index: 101; */
+  z-index: 100;
 }
 
 .top-navigation a:link, .top-navigation a:visited, .top-navigation a:active {
@@ -198,7 +202,7 @@ section.hover-instructions {
   top: 0px;
   left: 0px;
   padding: 0px;
-  z-index: 100;
+  z-index: 101;
   font-family: 'Poppins', Arial, sans-serif;
   overflow: scroll;
 }
