--- a/css/works/best-practices.css
+++ b/css/works/best-practices.css
@@ -5,7 +5,7 @@ body {
 .hero hgroup {
   width: 37%;
   margin-left: 80px;
-  top: 400px;
+  top: 50px;
   color: white;
 }
 
